--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,8 @@ dependencies {
     implementation 'org.mapdb:mapdb:3.1.0'
     implementation 'org.jetbrains.kotlin:kotlin-stdlib:2.0.10'
     implementation 'org.jetbrains.kotlin:kotlin-runtime:1.2.71'
+    implementation 'org.apache.httpcomponents.client5:httpclient5:5.2.1'
+    implementation 'dk.glasius:external-config:3.0.0'
     compileOnly("io.micronaut:micronaut-inject-groovy")
     console("org.grails:grails-console")
     runtimeOnly("org.apache.tomcat:tomcat-jdbc")
