--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,9 @@ dependencies {
     implementation 'org.jetbrains.kotlin:kotlin-runtime:1.2.71'
     implementation 'org.apache.httpcomponents.client5:httpclient5:5.2.1'
     implementation 'dk.glasius:external-config:3.0.0'
+    implementation 'org.testcontainers:elasticsearch:1.19.6'
+    implementation 'dev.langchain4j:langchain4j-elasticsearch:0.33.0'
+    implementation 'dev.langchain4j:langchain4j-embeddings-all-minilm-l6-v2:0.33.0'
     compileOnly("io.micronaut:micronaut-inject-groovy")
     console("org.grails:grails-console")
     runtimeOnly("org.apache.tomcat:tomcat-jdbc")
